[package]
name = "kvs"
version = "0.1.0"
authors = ["Nirnay Roy <nirnayroy1012@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = {version = "4.5.4" , features = ["derive"] }
shlex = "1.3.0"
serde = "1.0.117"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tempfile ="3.10.1"
unique_id="0.1.5"